#36 don't overwrite if the file exists